# agg-r-server

./: .gitignore  Cargo.toml
src/: errors.rs  main.rs  result.rs  schema.rs  settings.rs
src/db/: models.rs  queries.rs
src/db/queries/: records.rs  sources.rs  users.rs
src/server/: auth.rs  errors.rs  mod.rs  server.rs
src/server/handlers/: mod.rs  records.rs  routes.rs  sources.rs  users.rs
